tree-sitter-boreal/test/corpus/product_type.txt
================================================================================
Product type
================================================================================

module Expressions where

type Vector = { size : Int }

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name))
  (top_level_declarations
    (datatype_declaration
      (datatype_head
        (constructor))
      (record_body
        (record_member
          (identifier)
          (constructor))))))
