tree-sitter-boreal/test/corpus/type_declaration.txt
================================================================================
Sum type
================================================================================

module Expressions where

type Vector = V Int

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (module_name))
  (top_level_declarations
    (datatype_declaration
      (datatype_head
        (constructor))
      (datatype_body
        (constructor)
        (constructor)))))
